# ShaDe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  canonic.hxx  main.cpp  point.hxx  ransac.hxx  ztree.hxx
ShaDe/: canonic.hxx  main.cpp  point.hxx  ztree.hpp
ShaDe.xcodeproj/: project.pbxproj
ShaDe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ShaDe.xcodeproj/xcuserdata/matthias.xcuserdatad/xcschemes/: ShaDe.xcscheme  xcschememanagement.plist
headers/: canonic.hxx  point.hxx  ransac.hxx  ztree.hxx
sources/: ransac.hxx  ztree.hxx
tests/: main.cpp
